--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                     </a>
 
-                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/control-flow"
+                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/control_flow"
                         target="_blank" class="folder-link">
 
                         <div class="folder-card">
@@ -121,12 +121,12 @@
 
                     </a>
 
-                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/control-flow"
+                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/data_structures"
                         target="_blank" class="folder-link">
 
                         <div class="folder-card">
                             <img src="images/datastructures.png" alt="Data Structures" class="folder-image" />
-                            <h3 class="folder-title">Control Flow</h3>
+                            <h3 class="folder-title">Data-structures</h3>
                             <div class="popup-hover">
                                 <p>Each program contains detailed explanation of Data_Structures</p>
                             </div>
@@ -134,12 +134,12 @@
                     </a>
 
 
-                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/control-flow"
+                    <a href="https://github.com/srujanachalluri/python-learning-platform/tree/main/automation"
                         target="_blank" class="folder-link">
 
                         <div class="folder-card">
                             <img src="images/automation.png" alt="Automation" class="folder-image" />
-                            <h3 class="folder-title">Control Flow</h3>
+                            <h3 class="folder-title">Automation</h3>
                             <div class="popup-hover">
                                 <p>Automation Programs : Beginner-Friendly</p>
                             </div>
