updated mobile version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header id="header">
         <div class="container">
-            <h1 class="logo">Python-Learning-Platform</h1>
+            <h1 class="logo">Python Learning Platform</h1>
             <nav id="nav">
                 <ul>
                     <li><a href="#new-updates" class="nav-link active">New</a></li>
@@ -168,10 +168,9 @@
             <div class="container contact-container">
                 <h2>Contact Me</h2>
                 <p>If you’d like to connect, collaborate, or discuss Python, feel free to reach out.</p>
-
+                 📧 <a href="mailto:srujanachalluri@email.com">srujanachalluri@email.com</a> <br>
                 <div class="social-links">
-                     📧 <a href="mailto:srujanachalluri@email.com">srujanachalluri@email.com</a>
-
+                    
                     <a href="https://github.com/srujanachalluri" target="_blank" aria-label="GitHub">
                         <img src="icons/github-color.svg" alt="GitHub" />
                     </a>
